--- a/Pandas/01. Series.ipynb
+++ b/Pandas/01. Series.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Pandas\n",
-    "파이썬에서 사용하는 데이터 분석 라이브러리"
+    "파이썬에서 사용하는 데이터 분석 라이브러리 수정test"
    ]
   },
   {
